manifests/system/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus@sha256:71d3894cc4cc1e2f460af4a3a9016cebf8037061f5a4ee324b6414c775de55fb
          ports:
            - containerPort: 80
