manifests/system/prometheus/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: prometheus-system
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways-system
  hostnames:
    - prometheus.k8s.imavgs.no
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
